components/base/gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: gateway
  namespace: argocd
  annotations:
    cert-manager.io/issuer: issuer
spec:
  gatewayClassName: cilium
  listeners:
    - hostname: "*.promotesudbury.ca"
      name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All

    - hostname: "*.promotesudbury.ca"
      name: https-link
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
        - name: gateway-certificate #Automaticaly Created
      allowedRoutes:
        namespaces:
          from: All
