components/base/gateway/httproute.yaml
# HTTP Redirection Route
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: http-redirect-http-route
  namespace: argocd
spec:
  parentRefs:
  - name: gateway
    namespace: argocd
    sectionName: http
  hostnames:
  - "*.promotesudbury.ca"
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
        port: 443
---
# ArgoCD UI
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: argocd-http-route
  namespace: argocd
spec:
  parentRefs:
  - name: gateway
    namespace: argocd
    sectionName: https
  hostnames:
  - "argo.promotesudbury.ca"
  rules:
  - backendRefs:
    - name: argocd-server
      port: 30080

---
# # Keycloak
# apiVersion: gateway.networking.k8s.io/v1beta1
# kind: HTTPRoute
# metadata:
#   name: keycloak
#   namespace: argocd
# spec:
#   parentRefs:
#   - name: gateway # gateway name
#     namespace: gateway
#     sectionName: https-link
#   hostnames:
#   - "keycloak.promotesudbury.ca"
#   rules:
#   - matches:
#     - path:
#         type: PathPrefix
#         value: /auth
#     backendRefs:
#     - name: keycloak
#       port: 80
#   - matches:
#     - path:
#         type: PathPrefix
#         value: /js
#     backendRefs:
#     - name: keycloak
#       port: 80
#   - matches:
#     - path:
#         type: PathPrefix
#         value: /realms
#     backendRefs:
#     - name: keycloak
#       port: 80
#   - matches:
#     - path:
#         type: PathPrefix
#         value: /resources
#     backendRefs:
#     - name: keycloak
#       port: 80
#   - matches:
#     - path:
#         type: Exact
#         value: /robots.txt
#     backendRefs:
#     - name: keycloak
#       port: 80
#   - matches:
#     - path:
#         type: PathPrefix
#         value: /admin
#     backendRefs:
#     - name: keycloak
#       port: 80
